fix the z-index bug

--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ form.left_nav_line {
 }
 
 .WB_global_nav {
+	z-index: 99;
 	height:40px!important;
 	border-bottom:1px solid #3a3a3a;
 	background:none!important;
@@ -1070,7 +1071,7 @@ div[node-type="moreList"] .lev a:hover,div[node-type="moreList"] .lev a:hover .l
 
 div[node-type="feed_list_media_disp"] {
 	position:absolute;
-	z-index:9999;
+	z-index:9;
 	padding:0!important;
 	width:100%;
 	height:100%;
